Fixed logo on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -167,7 +167,7 @@ i.pointer {
     margin-bottom: 1em;
 
 
-    padding: 1em 4em 0em 4em;
+    padding: 1em 0em 0em 0em;
   }
 
 
