--- a/frontend/src/intro.css
+++ b/frontend/src/intro.css
@@ -108,3 +108,20 @@
 
     color: #7c7732 !important;
 }
+
+
+/*
+
+    RESPONSIVE
+*/
+
+@media only screen and (max-width: 750px) {
+
+    .intro-logo {
+        /*justify-content: center;*/
+        margin-top: 2em;
+        margin-bottom: 1em;
+        padding: 1em 0em 0em 0em;
+    }
+
+}
